// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rateLimitSchema invalid 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "code": "invalid_type",
            "expected": "number",
            "received": "string",
            "path": [
              "interval"
            ],
            "message": "Expected number, received string"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "code": "too_small",
            "minimum": 1,
            "type": "string",
            "inclusive": true,
            "exact": false,
            "message": "String must contain at least 1 character(s)",
            "path": [
              "interval"
            ]
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "interval"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`rateLimitSchema invalid 2`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 0,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be greater than 0",
    "path": [
      "interval"
    ]
  }
]]
`;

exports[`rateLimitSchema invalid 3`] = `
[ZodError: [
  {
    "code": "custom",
    "message": "Invalid interval \\"--\\"",
    "path": [
      "interval",
      "interval"
    ]
  }
]]
`;

exports[`rateLimitSchema invalid 4`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 0,
    "type": "number",
    "inclusive": true,
    "exact": false,
    "message": "Number must be greater than or equal to 0",
    "path": [
      "maxPerInterval"
    ]
  }
]]
`;

exports[`rateLimitSchema valid 1`] = `
{
  "interval": 10,
  "maxPerInterval": 100,
}
`;

exports[`rateLimitSchema valid 2`] = `
{
  "interval": 10,
  "maxPerInterval": 100,
}
`;

exports[`rateLimitSchema valid 3`] = `
{
  "interval": 86400,
  "maxPerInterval": 1000,
}
`;
